--- a/src/styles/dashboard-page.css
+++ b/src/styles/dashboard-page.css
@@ -3,13 +3,17 @@
 .dashboard-container {
     display: flex;
     align-items: flex-start;
+    flex-direction: row;
     padding: 20px;
+    background-color: lavenderblush;
   }
   
   .question-column {
     display: flex;
     flex-direction: column;
     margin-right: 20px;
+    overflow: scroll;
+    height: 100%;
   }
   
   .question-button {
@@ -28,8 +32,18 @@
     background-color: #007bff;
     color: #fff;
   }
+
+  .answered{
+    background-color: green;
+  }
+
+  .visited{
+    background-color: yellow;;
+  }
   
   .question-content {
+    justify-content: center;
+    align-items: center;
     flex: 1;
   }
   
@@ -53,4 +67,60 @@
   .submit-button:hover {
     background-color: #218838;
   }
+
+  .timer-container {
+    display: flex;
+    justify-content: right;
+    position: relative;
+    color: green;
+    font-weight: bold;
+  }
+
+  @media (max-width: 600px) {
+    .dashboard-container {
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+      padding: 20px;
+      width: 100%;
+      height: 100vh;
+    }
+
+    .question-column {
+      display: flex;
+      flex-direction: row;
+      margin-right: 20px;
+      overflow: scroll;
+      width: 100%;
+    }
+  }
+  
+  .card {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+  }
+  
+  .question {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+  }
+  
+  .options {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-items: baseline;
+  }
+  
+  .option {
+    display: flex;
+    align-items: center;
+  }
+  
+  input[type="radio"] {
+    margin-right: 10px;
+  }
+  
   
